# AITest

./: .gitignore  AITest.sln  AITest.slnx  Directory.Build.props  Directory.Packages.props  README.md  global.json  package-lock.json
.config/: dotnet-tools.json
.github/workflows/: main.yml
AITest.Tests.Windows/: packages.lock.json
src/AITest/: AITest.csproj  MainPage.xaml  MainPage.xaml.cs  MauiProgram.cs  packages.lock.json
src/AITest.API/: AIApi.cs  AITest.API.csproj  Program.cs  packages.lock.json
src/AITest.API/Features/Chat/: ChatApi.cs  ChatEndpointMap.cs  ChatRoutes.cs
src/AITest.API/HealthCheck/: SampleHealthCheck.cs
src/AITest.API/Infrastructure/: DocumentationEndpoints.cs
src/AITest.API/wwwroot/: AITest.API.json  openapi.html
src/AITest.Console/: AITest.Console.csproj  Program.cs  packages.lock.json
src/AITest.Mobile/: AITest.Mobile.csproj  App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  GlobalUsings.cs  MauiProgram.cs  packages.lock.json
src/AITest.Mobile/Data/: CategoryRepository.cs  Constants.cs  JsonContext.cs  ProjectRepository.cs  SeedDataService.cs  TagRepository.cs  TaskRespository.cs
src/AITest.Mobile/Models/: Category.cs  CategoryChartData.cs  Project.cs  ProjectTask.cs  ProjectsTags.cs  Tag.cs
src/AITest.Mobile/PageModels/: IProjectTaskPageModel.cs  MainPageModel.cs  ManageMetaPageModel.cs  ProjectDetailPageModel.cs  ProjectListPageModel.cs  TaskDetailPageModel.cs
src/AITest.Mobile/Pages/: MainPage.xaml  MainPage.xaml.cs  ManageMetaPage.xaml  ManageMetaPage.xaml.cs  ProjectDetailPage.xaml  ProjectDetailPage.xaml.cs  ProjectListPage.xaml  ProjectListPage.xaml.cs  TaskDetailPage.xaml  TaskDetailPage.xaml.cs
src/AITest.Mobile/Pages/Controls/: AddButton.xaml  AddButton.xaml.cs  CategoryChart.xaml  CategoryChart.xaml.cs  LegendExt.cs  ProjectCardView.xaml  ProjectCardView.xaml.cs  TagView.xaml  TagView.xaml.cs  TaskView.xaml  TaskView.xaml.cs
src/AITest.Mobile/Services/: IErrorHandler.cs  ModalErrorHandler.cs
src/AITest.Mobile/Utilities/: ProjectExtentions.cs  TaskUtilities.cs
src/AITest.Postgresql/: .dockerignore  Postgresql.Dockerfile  README.md  create-dev-db-and-extensions.sh  dev-entrypoint.sh  entrypoint.sh  generate-dev-certs.ps1  remove-aitest-postgre.ps1  start-aitest-postgres-container.ps1
src/AITest.PowerBI/: AITest.PowerBI.pbip
src/AITest.PowerBI/AITest.PowerBI.Report/: .platform  definition.pbir
src/AITest.PowerBI/AITest.PowerBI.Report/definition/pages/: pages.json
src/AITest.PowerBI/AITest.PowerBI.Report/definition/pages/86e60c376c50262d5061/: page.json
src/AITest.PowerBI/AITest.PowerBI.SemanticModel/: .platform  diagramLayout.json
src/AITest.PowerBI/AITest.PowerBI.SemanticModel/definition/: model.tmdl
src/AITest.PowerBI/AITest.PowerBI.SemanticModel/definition/cultures/: fi-FI.tmdl
src/AITest.PythonAI/: .gitignore  main.py  olive_quantize_models.ipynb  pyproject.toml  setup-venv.ps1  setup.ipynb  update-packages.py
src/AITest.PythonAI/olive/: olive_quantize_cpu_to_fp16.json  olive_quantize_models.py  olive_quantize_to_int8.json
src/AITest.PythonAI/src/inc_dec/: inc_dec.py
src/AITest.PythonAI/tests/: test_unittest.py
src/AITest.PythonNotebooks/: pyproject.toml
src/AITest.Web/: AITest.Web.csproj  Program.cs  packages.lock.json
src/AITest.Web/wwwroot/: manifest.webmanifest
test/: package-lock.json  package.json
test/AITest.Benchmarks/: AITest.Benchmarks.csproj  packages.lock.json
test/AITest.Tests/: AITest.Tests.csproj  TempTest.cs  packages.lock.json
test/AITest.Tests.Android/: AITest.Tests.Android.csproj  Test1.cs  packages.lock.json
test/AITest.Tests.Mac/: Test1.cs  packages.lock.json
test/AITest.Tests.Windows/: AITest.Tests.Windows.csproj  Test1.cs  packages.lock.json
