[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "aitest_python_ai"
version = "0.1.0"
description = "A Python environment for general AI related integrated with a .NET project."
authors = [
    { name = "Veikko Eeva", email = "veikko_e@hotmail.com" }
]

requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "olive-ai",
    "olive-ai[ort-genai,auto-opt,finetune,directml,cpu]",
    "transformers==4.44.2",
    "onnxruntime-genai",    
    "onnx_graphsurgeon",
    "onnxruntime"
]

[project.optional-dependencies]
dev = [
    "pip-tools>=6.12",
    "pytest>=7.5",    
    "pytest-cov>=4.1",
    "huggingface-hub[cli]"
]

[project.urls]
Homepage = "https://github.com/veikkoeeva/AITest"
Issues = "https://github.com/veikkoeeva/AITest/issues"
Documentation = "https://github.com/veikkoeeva/AITest"

[project.scripts]
aitest = "main:main"