[project]
name = "aitest_python_ai"
version = "0.1.0"
description = "A Python environment for general AI related integrated with a .NET project."
authors = [
    { name = "Veikko Eeva", email = "veikko_e@hotmail.com" }
]

dependencies = [    
    "onnxruntime-genai",
    "onnxruntime",
    "olive-ai[directml,cpu]",
    "transformers",     
    "onnx_graphsurgeon",    
    "torch",
    "torchvision",
    "opencv-python",
    "ipykernel",
    "safetensors"
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest",
    "pytest-cov",
    "pipdeptree",
    "huggingface-hub[cli]"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

requires-python = "==3.12"
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://github.com/veikkoeeva/AITest"
Issues = "https://github.com/veikkoeeva/AITest/issues"
Documentation = "https://github.com/veikkoeeva/AITest"

[project.scripts]
aitest = "main:main"

[tool.setuptools]
packages = []