[project]
name = "aitest_python_ai"
version = "0.1.0"
description = "A Python environment for general AI related integrated with a .NET project."
authors = [
    { name = "Veikko Eeva", email = "veikko_e@hotmail.com" }
]

requires-python = ">=3.13,<3.14"
license = { text = "Apache-2.0" }

dependencies = [    
    "onnxruntime-genai",
    "onnxruntime",
    # DirectML is Windows only. Trying to include it on a non-supported system will cause a dependency failure.
    "olive-ai[cpu]; sys_platform != 'win32'",
    "olive-ai[cpu,directml]; sys_platform == 'win32'",
    "transformers",     
    "onnx_graphsurgeon",
    "torch",
    "torchvision",
    "opencv-python",
    "ipykernel",
    "safetensors",
    "ipywidgets"
]

[project.optional-dependencies]
dev = [    
    "types-requests",
    "types-setuptools",
    "pytest",
    "pytest-cov",
    "coverage",
    "pylint",
    "sphinx",
    "nbsphinx",
    "black",    
    "pipdeptree",
    "huggingface-hub[cli]"
]

[project.urls]
Homepage = "https://github.com/veikkoeeva/AITest"
Issues = "https://github.com/veikkoeeva/AITest/issues"
Documentation = "https://github.com/veikkoeeva/AITest"

[project.scripts]
aitest = "main:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pyright]
typeCheckingMode = "strict"
include = ["./**/*"]
exclude = [
    "**/cache",
    "**/__pycache__",
    "src/converted"
]
venvPath = "."
venv = ".venv"
verboseOutput = true
extraPaths = ["./src/**/*"]

executionEnvironments = [
  { root = ".", pythonVersion = "3.13", reportMissingImports = "warning" }
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-v --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
python_functions = ["test_*"]

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
branch = true
source = ["src"]